v3.1.2:
  - Place correctly the protocols on the left panel.
v3.1.1:
  - Installer updated: binaries are automatically downloaded now. Thanks to José Jesús Fernández.
v3.1.0:
  - First plugin release