@@ -1,5 +1,6 @@
 v3.1.2:
   - Place correctly the protocols on the left panel.
+  - Fix execution in CentOS or other distros
 v3.1.1:
   - Installer updated: binaries are automatically downloaded now. Thanks to José Jesús Fernández.
 v3.1.0:
